--- a/source/blazorFagdag/blazorFagdag/Server/blazorFagdag.Server.csproj
+++ b/source/blazorFagdag/blazorFagdag/Server/blazorFagdag.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
   </ItemGroup>
 
   <ItemGroup>
